Aded TrashContaier service

--- a/BinMaps/BinMaps.csproj
+++ b/BinMaps/BinMaps.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BinMaps.Core\BinMaps.Core.csproj" />
     <ProjectReference Include="..\BinMaps.Data\BinMaps.Data.csproj" />
   </ItemGroup>
 
