--- a/BinMaps/appsettings.json
+++ b/BinMaps/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BinMaps;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "http://localhost:5173",
+    "ValidIssuer": "http://localhost:7036",
+    "Secret": "bc34a32a-8861-44f8-b148-20702db5e149"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BinMaps;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
